# MIDIVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  MIDIVisualizer.sln  MIDIVisualizer.vcxproj  MIDIVisualizer.vcxproj.filters  Makefile  Makefile.linux  README.md
.github/ISSUE_TEMPLATE/: feature-suggestion.md  issue-report.md
.github/workflows/: CI.yml  release.yml
libs/: FindFFMPEG.cmake  FindFFmpeg.cmake  FindFluidsynth.cmake  MacOSXBundleInfo.plist.in  package-macos.sh  package-ubuntu.sh
libs/glfw/src/: CMakeLists.txt
libs/libremidi/: AUTHORS  CMakeLists.txt  LICENSE.RtMidi  README.md
libs/libremidi/include/libremidi/: api.hpp  libremidi.cpp  libremidi.hpp  message.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
libs/libremidi/include/libremidi/detail/: alsa.hpp  coreaudio.hpp  dummy.hpp  emscripten.hpp  emscripten_api.hpp  jack.hpp  midi_api.hpp  midi_queue.hpp  raw_alsa.hpp  raw_alsa_helpers.hpp  semaphore.hpp  winmm.hpp  winuwp.hpp
libs/libremidi/tests/: cmidiin.cpp  emscripten_midiin.cpp  midi2.cpp  midiclock_in.cpp  midiclock_out.cpp  midifile_dump.cpp  midiobserve.cpp  midiout.cpp  midiprobe.cpp  multithread_midiout.cpp  qmidiin.cpp  sysextest.cpp
libs/libremidi/tests/unit/: midi_in.cpp  midi_out.cpp  midifile_read.cpp  midifile_write.cpp
libs/nfd/: CMakeLists.txt
libs/rtmidi17/: CMakeLists.txt  LICENSE.ModernMidi  README.md
libs/rtmidi17/include/rtmidi17/: message.hpp  reader.cpp  reader.hpp  rtmidi17.cpp  rtmidi17.hpp  writer.cpp  writer.hpp
libs/rtmidi17/include/rtmidi17/detail/: alsa.hpp  coreaudio.hpp  dummy.hpp  jack.hpp  midi_api.hpp  semaphore.hpp  winmm.hpp  winuwp.hpp
libs/rtmidi17/tests/: cmidiin.cpp  midiclock_in.cpp  midiclock_out.cpp  midiobserve.cpp  midiout.cpp  midiprobe.cpp  qmidiin.cpp  sysextest.cpp
libs/sr_gui/: CMakeLists.txt  LICENSE.md  README.md  premake5.lua
libs/sr_gui/include/: sr_gui.h
libs/sr_gui/src/: sr_gui_cli.c  sr_gui_internal.h  sr_gui_lin.c  sr_gui_mac.m  sr_gui_win.cpp
resources/icon/: MIDIVisualizer.icns  MIDIVisualizer.rc
resources/shaders/: background.frag  background.vert  backgroundtexture.frag  backgroundtexture.vert  flashes.frag  flashes.vert  fxaa.frag  keys.frag  keys.vert  majorKeys.frag  majorKeys.vert  minorKeys.frag  minorKeys.vert  notes.frag  notes.vert  particles.frag  particles.vert  particlesblur.frag  pedal.frag  pedal.vert  score_bars.frag  score_bars.vert  score_labels.frag  score_labels.vert  screenquad.frag  wave.frag  wave.vert  wave_noise.frag  wave_noise.vert
ressources/: shaders.txt  shaders_lines.h
ressources/shaders/: background.frag  flashes.frag  flashes.vert  note.frag  note.vert  notes.frag  notes.vert  particles.frag  particles.vert  particlesblur.frag  screenquad.vert  shaders.h
src/: main.cpp  packager.cpp
src/helpers/: Configuration.cpp  Configuration.h  ImGuiStyle.cpp  ImGuiStyle.h  MeshUtilities.cpp  MeshUtilities.h  ProgramUtilities.cpp  ProgramUtilities.h  Recorder.cpp  Recorder.h  ResourcesManager.cpp  ResourcesManager.h  System.cpp  System.h
src/libs/glfw/lib-win-x64/: glfw3.lib  glfw3dll.lib
src/libs/glfw/lib-win-x86/: glfw3.lib  glfw3dll.lib
src/libs/imgui/: imconfig.h  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/libs/lodepng/: lodepng.cpp  lodepng.h
src/libs/minisdl/: minisdl_audio.c  minisdl_audio.h  minisdl_audio_new.h
src/libs/nfd/lib-win-vc2017/: nfd.lib
src/libs/nfd/lib-win-vc2017-64/: nfd.lib
src/libs/tsf/: tsf.h
src/midi/: MIDIBase.cpp  MIDIBase.h  MIDIFile.cpp  MIDIFile.h  MIDITrack.cpp  MIDITrack.h  MIDIUtils.cpp  MIDIUtils.h
src/rendering/: Background.cpp  Background.h  Framebuffer.cpp  Framebuffer.h  MIDIScene.cpp  MIDIScene.h  Renderer.cpp  Renderer.h  Score.cpp  Score.h  ScreenQuad.cpp  ScreenQuad.h  SetOptions.cpp  SetOptions.h  State.cpp  State.h  Viewer.cpp  Viewer.h
src/rendering/camera/: Camera.cpp  Camera.h  Keyboard.cpp  Keyboard.h
src/rendering/scene/: MIDIScene.cpp  MIDIScene.h  MIDISceneFile.cpp  MIDISceneFile.h  MIDISceneLive.cpp  MIDISceneLive.h
src/resources/: data.h  flash_image.cpp  font_data_Lato.h  font_image.cpp  meshes.cpp  meshes.h  noise_image.cpp  particles_image.cpp  pedal_center_image.cpp  pedal_side_image.cpp  pedal_top_image.cpp  shaders.cpp  strings.h
src/ressources/: data.h  flash_image.cpp  flash_image.h  font_image.h  particles_image.cpp  particles_image.h  shaders.cpp  shaders.h
