project(nfd)

set(NFD_SOURCES include/nfd.h common.h nfd_common.h nfd_common.c)

if(WIN32)
	list(APPEND NFD_SOURCES nfd_win.cpp)
elseif(APPLE)
	find_library(APPKIT_LIBRARY AppKit)
	list(APPEND NFD_SOURCES nfd_cocoa.m)
elseif(UNIX AND NOT APPLE)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
	list(APPEND NFD_SOURCES nfd_gtk.c)
endif()

add_library(nfd STATIC ${NFD_SOURCES})
set_target_properties(nfd PROPERTIES FOLDER "NFD")
target_compile_definitions(nfd PRIVATE _CRT_SECURE_NO_WARNINGS)
target_include_directories(nfd PUBLIC ${nfd_SOURCE_DIR}/include/)

if(APPLE)
	target_link_libraries(nfd PRIVATE ${APPKIT_LIBRARY})
elseif(UNIX AND NOT APPLE)
	target_include_directories(nfd PRIVATE ${GTK3_INCLUDE_DIRS})
	target_link_libraries(nfd PRIVATE ${GTK3_LIBRARIES})
endif()
